# dm-unit

./: .gitignore  Cargo.toml  README.md  cross-building-kernel-notes.md  dm-unit
benches/: update_counter_bench.rs
doc/: Allocating memory in the guest.md  Building.md  Calling guest functions.md  Contents.md  Creating data structures in the guest.md  Example tests.md  Introduction.md  Running dm-unit.md  The test fixture.md  Writing api wrappers.md  Writing stubs.md  Writing tests.md
doc/.obsidian/: workspace.json
misc/: all.patch  disable-inlining.patch  kernel.config  module.lds  no-inlining-kernel.config  no-stack-protector.patch  setup-cross-compile  v6.3-all.patch  v6.4-all.patch  v6.5-all.patch  v6.6-all.patch
misc/v6.12/: 01_gitignore.patch  02_makefile.patch  03_bufio.patch  04_cache.patch  05_slab.patch  06_btree.patch  07_extent_allocator.patch  08_the_rest.patch  21_no_auto_inline.patch  22_dm_array_1.patch  23_dm_array_2.patch  24_dm_array_3.patch  config
src/: anymap.rs  block_manager.rs  breakpoint.rs  capture_log.rs  db.rs  decode.rs  errno.rs  fixture.rs  guest.rs  lib.rs  loader.rs  lock_check.rs  main.rs  memory.rs  path_formatter.rs  primitive.rs  snapshot.rs  stats.rs  test_runner.rs  user_data.rs  vm.rs
src/bench/: btree.rs  mod.rs  rtree.rs
src/emulator/: branch_predictor.rs  decode.rs  ir.rs  ir_optimise.rs  loader.rs  memory.rs  mod.rs  riscv.rs  riscv_to_ir.rs  stack_trace.rs  vm.rs
src/pdata/: mod.rs  rtree.rs  rtree_walker.rs
src/stubs/: block_device.rs  block_manager.rs  mod.rs  printk.rs  rw_semaphore.rs
src/tests/: array.rs  array_cursor.rs  array_metadata.rs  block_manager.rs  btree.rs  btree_cursor.rs  btree_metadata.rs  btree_remove.rs  bufio.rs  cache.rs  extent_allocator.rs  fixture.rs  mod.rs  persistent_metadata.rs  rtree.rs  space_map.rs  space_map_disk.rs  space_map_metadata.rs  thinp.rs  thinp2.rs  transaction_manager.rs
src/tools/: mod.rs
src/utils/: mod.rs  rtree.rs
src/wrappers/: array.rs  array_cursor.rs  block_manager.rs  btree.rs  btree_cursor.rs  bufio.rs  cache_metadata.rs  extent_allocator.rs  mod.rs  rtree.rs  space_map.rs  space_map_disk.rs  thinp_metadata.rs  (+1 more)
(+9 files in other folders)
