[package]
name = "dm-unit"
version = "0.1.0"
authors = ["Joe Thornber <ejt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
byteorder = "1.3"
clap = "2.33"
crc32c = "0.4"
elf = "0.0.10"
env_logger = "0.8.2"
fixedbitset = "0.3.1"
gdbstub = "0.4.3"
intrusive-collections = "0.9"
libc = "0.2.82"
log = "0.4"
nom = "6.0.1"
regex = "1"
rand = "0.8.0"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }
#thinp = { path = "../thinp-for-dmunit" }
thiserror = "1.0"

