[package]
name = "dm-unit"
version = "0.1.0"
authors = ["Joe Thornber <ejt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
bit-set = "0.5.2"
byteorder = "1.3"
clap = "4.2"
crc32c = "0.6"
duct = "0.13.5"
elf = "0.0.10"
env_logger = "0.10"
fixedbitset = "0.4"
gimli = "0.27"
intrusive-collections = "0.9"
libc = "0.2.82"
log = "0.4"
nom = "7.1.3"
num_cpus = "1.13"
regex = "1"
rand = "0.8.0"
rand_chacha = "0.3"
tempfile = "3.2"
threadpool = "1.0"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }

thiserror = "1.0"

[profile.release]
debug = true


